updated the working directory

--- a/.github/workflows/infrapipeline.yml
+++ b/.github/workflows/infrapipeline.yml
@@ -108,4 +108,4 @@ jobs:
 
       - name: Deploy Flask app to AKS
         run: |
-          kubectl apply -f deployment.yaml
+          kubectl apply -f my-flask-app/deployment.yaml
