--- a/.github/workflows/infrapipeline.yml
+++ b/.github/workflows/infrapipeline.yml
@@ -107,5 +107,6 @@ jobs:
             --overwrite-existing
 
       - name: Deploy Flask app to AKS
+        working-directory: ./my-flask-app
         run: |
-          kubectl apply -f my-flask-app/deployment.yaml
+          kubectl apply -f deployment.yaml
