--- a/.github/workflows/infrapipeline.yml
+++ b/.github/workflows/infrapipeline.yml
@@ -84,29 +84,29 @@ jobs:
         if: github.ref == 'refs/heads/main'
         run: terraform apply -auto-approve tfplan.bin
         working-directory: ${{ env.WORKING_DIR }}
-  deploy:
-    name: Deploy to AKS
-    runs-on: ubuntu-latest
-    needs: terraform
-    steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
+  # deploy:
+  #   name: Deploy to AKS
+  #   runs-on: ubuntu-latest
+  #   needs: terraform
+  #   steps:
+  #     - name: Checkout repo
+  #       uses: actions/checkout@v4
 
-      - name: Azure Login (OIDC)
-        uses: azure/login@v2
-        with:
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+  #     - name: Azure Login (OIDC)
+  #       uses: azure/login@v2
+  #       with:
+  #         client-id: ${{ secrets.AZURE_CLIENT_ID }}
+  #         tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+  #         subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
-      - name: Set AKS context
-        run: |
-          az aks get-credentials \
-            --resource-group demoaks-rg \
-            --name demoaks-aks \
-            --overwrite-existing
+  #     - name: Set AKS context
+  #       run: |
+  #         az aks get-credentials \
+  #           --resource-group demoaks-rg \
+  #           --name demoaks-aks \
+  #           --overwrite-existing
 
-      - name: Deploy Flask app to AKS
-        working-directory: ./my-flask-app
-        run: |
-          kubectl apply -f deployement.yaml
+  #     - name: Deploy Flask app to AKS
+  #       working-directory: ./my-flask-app
+  #       run: |
+  #         kubectl apply -f deployement.yaml
