--- a/.github/workflows/flask-deploy.yml
+++ b/.github/workflows/flask-deploy.yml
@@ -2,8 +2,8 @@ name: Build & Deploy Flask app to AKS
 
 on:
   push:
-    paths:
-      - "my-flask-app/**"
+    # paths:
+    #   - "my-flask-app/**"
   workflow_dispatch:
 
 permissions:
@@ -49,7 +49,7 @@ jobs:
       - name: Get AKS credentials
         run: az aks get-credentials --resource-group $AKS_RG --name $AKS_CLUSTER --overwrite-existing
 
-      # 6️⃣ Update image tag inside deployment.yaml dynamically
+      # 6️ Update image tag inside deployment.yaml dynamically
       - name: Update image tag in deployment.yaml
         working-directory: ./my-flask-app
         run: |
@@ -58,7 +58,7 @@ jobs:
           echo "Updated deployment.yaml content:"
           grep "image:" deployement.yaml
 
-      # 7️⃣ Deploy to AKS using updated YAML
+      # 7️ Deploy to AKS using updated YAML
       - name: Apply updated deployment to AKS
         working-directory: ./my-flask-app
         run: |
