--- a/.github/workflows/infrapipeline.yml
+++ b/.github/workflows/infrapipeline.yml
@@ -69,10 +69,16 @@ jobs:
         run: terraform validate
         working-directory: ${{ env.WORKING_DIR }}
 
+      - name: Debug files
+        run: |
+          pwd
+          ls -la
+        working-directory: ${{ env.WORKING_DIR }}
+
       # Step 7️ Terraform Plan
       - name: Terraform Plan
         id: plan
-        run: terraform plan -input=false -no-color -out=tfplan.bin -var-file="${{ github.workspace }}/${{ github.event.inputs.environment }}.tfvars"
+        run: terraform plan -input=false -no-color -out=tfplan.bin -var-file="${{ github.event.inputs.environment }}.tfvars"
         working-directory: ${{ env.WORKING_DIR }}
 
       # Step 8️ Upload Plan Artifact (for review)
