--- a/.github/workflows/infrapipeline.yml
+++ b/.github/workflows/infrapipeline.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       environment:
-        description: "Select environment to deploy (dev or prod)"
+        description: "Select environment to deploy testing the cherry pick(dev or prod)"
         required: true
         default: "dev"
         type: choice
